Dcreator/src/objects/fun__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ABC__c</fullName>
        <label>ABC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enjoy__c</fullName>
        <label>Enjoy</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <label>Queue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web__c</fullName>
        <label>Web</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>fun</label>
</CustomObject>